test/functions/diten/passDomWithOutIntent.good
passDomWithOutIntent.chpl:6 error: Domains cannot be passed to functions with out intent
