test/functions/diten/passDomWithOutIntent.chpl
def f(out D: domain(1)) {
  writeln(D);
}

var D = [1..5];
f(D) blah;
